# Chess_SFML_GUI

./: CMakeLists.txt
src/: Button.cppm  EngineInterface.cppm  GameState.cppm  MovePanel.cppm  PlayerCard.cppm  WindowManager.cppm  main.cpp
src/EngineLib/: CMakeLists.txt  Position.cppm
